Добавлена система регистрации пользователей .

--- a/templates/base.html
+++ b/templates/base.html
@@ -26,102 +26,108 @@
     {% block extra_css %}{% endblock %}
 </head>
 <body class="d-flex flex-column h-100">
-    <header>
-        {% block header %}
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <div class="container">
-                <a class="navbar-brand" href="{% url 'landing' %}">
-                    <i class="bi bi-scissors me-2"></i>Стальная Борода
-                </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" 
-                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+   <header>
+    {% block header %}
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container">
+            <a class="navbar-brand" href="{% url 'landing' %}">
+                <i class="bi bi-scissors me-2"></i>Стальная Борода
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" 
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link {% if request.path == '/' %}active{% endif %}" href="{% url 'landing' %}">Главная</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'landing' %}#about">О нас</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link {% if request.path == '/services/' %}active{% endif %}" href="{% url 'services' %}">Услуги</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'landing' %}#masters">Мастера</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'landing' %}#reviews">Отзывы</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link {% if request.path == '/booking/' %}active{% endif %}" href="{% url 'booking' %}">Запись</a>
+                    </li>
+                </ul>
+                
+                <!-- Объединенное пользовательское меню -->
+                <ul class="navbar-nav ml-auto">
+                    {% if user.is_authenticated %}
+                        {% if user.is_staff %}
                         <li class="nav-item">
-                            <a class="nav-link {% if request.path == '/' %}active{% endif %}" href="{% url 'landing' %}">Главная</a>
+                            <a class="nav-link {% if request.path == '/orders/' %}active{% endif %}" href="{% url 'orders_list' %}">
+                                <i class="bi bi-list-ul me-1"></i>Заявки
+                            </a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="{% url 'landing' %}#about">О нас</a>
+                        
+                        <!-- Создание услуг и мастеров для админов -->
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                <i class="bi bi-plus-circle me-1"></i>Создать
+                            </a>
+                            <ul class="dropdown-menu dropdown-menu-end">
+                                <li><a class="dropdown-item" href="{% url 'service_create' %}">
+                                    <i class="bi bi-scissors me-2"></i>Услугу
+                                </a></li>
+                                <li><a class="dropdown-item" href="{% url 'master_create' %}">
+                                    <i class="bi bi-person-plus me-2"></i>Мастера
+                                </a></li>
+                            </ul>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link {% if request.path == '/services/' %}active{% endif %}" href="{% url 'services' %}">Услуги</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="{% url 'landing' %}#masters">Мастера</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="{% url 'landing' %}#reviews">Отзывы</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link {% if request.path == '/booking/' %}active{% endif %}" href="{% url 'booking' %}">Запись</a>
-                        </li>
-                    </ul>
-                    
-                    <!-- Объединенное пользовательское меню -->
-                    <ul class="navbar-nav ml-auto">
-                        {% if user.is_authenticated %}
-                            {% if user.is_staff %}
-                            <li class="nav-item">
-                                <a class="nav-link {% if request.path == '/orders/' %}active{% endif %}" href="{% url 'orders_list' %}">
-                                    <i class="bi bi-list-ul me-1"></i>Заявки
-                                </a>
-                            </li>
-                            
-                            <!-- Создание услуг и мастеров для админов -->
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                    <i class="bi bi-plus-circle me-1"></i>Создать
-                                </a>
-                                <ul class="dropdown-menu dropdown-menu-end">
-                                    <li><a class="dropdown-item" href="{% url 'service_create' %}">
-                                        <i class="bi bi-scissors me-2"></i>Услугу
-                                    </a></li>
-                                    <li><a class="dropdown-item" href="{% url 'master_create' %}">
-                                        <i class="bi bi-person-plus me-2"></i>Мастера
-                                    </a></li>
-                                </ul>
-                            </li>
-                            {% endif %}
-                            
-                            <!-- Профиль пользователя -->
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                    <i class="bi bi-person-circle me-1"></i>{{ user.username }}
-                                </a>
-                                <ul class="dropdown-menu dropdown-menu-end">
-                                    {% if user.is_staff %}
-                                    <li>
-                                        <a class="dropdown-item" href="{% url 'admin:index' %}">
-                                            <i class="bi bi-gear me-2"></i>Админка
-                                        </a>
-                                    </li>
-                                    <li><hr class="dropdown-divider"></li>
-                                    {% endif %}
-                                    <li>
-                                        <form method="post" action="{% url 'logout' %}">
-                                            {% csrf_token %}
-                                            <button type="submit" class="dropdown-item">
-                                                <i class="bi bi-box-arrow-right me-2"></i>Выйти
-                                            </button>
-                                        </form>
-                                    </li>
-                                </ul>
-                            </li>
-                        {% else %}
-                            <li class="nav-item">
-                                <a class="nav-link" href="{% url 'login' %}">
-                                    <i class="bi bi-box-arrow-in-right me-1"></i>Вход
-                                </a>
-                            </li>
                         {% endif %}
-                    </ul>
-                </div>
+                        
+                        <!-- Профиль пользователя -->
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                <i class="bi bi-person-circle me-1"></i>{{ user.username }}
+                            </a>
+                            <ul class="dropdown-menu dropdown-menu-end">
+                                {% if user.is_staff %}
+                                <li>
+                                    <a class="dropdown-item" href="{% url 'admin:index' %}">
+                                        <i class="bi bi-gear me-2"></i>Админка
+                                    </a>
+                                </li>
+                                <li><hr class="dropdown-divider"></li>
+                                {% endif %}
+                                <li>
+                                    <!-- Заменяем ссылку на форму с методом POST -->
+                                    <form method="post" action="{% url 'users:logout' %}" class="m-0 p-0">
+                                        {% csrf_token %}
+                                        <button type="submit" class="dropdown-item">
+                                            <i class="bi bi-box-arrow-right me-2"></i>Выйти
+                                        </button>
+                                    </form>
+                                </li>
+                            </ul>
+                        </li>
+                    {% else %}
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'users:login' %}">
+                                <i class="bi bi-box-arrow-in-right me-1"></i>Вход
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'users:register' %}">
+                                <i class="bi bi-person-plus me-1"></i>Регистрация
+                            </a>
+                        </li>
+                    {% endif %}
+                </ul>
             </div>
-        </nav>
-        {% endblock %}
-    </header>
+        </div>
+    </nav>
+    {% endblock %}
+</header>
     
     <main class="flex-shrink-0">
         {% block content %}
