HW#48:Все что касается 48 домашки

--- a/barbershop/templates/users/password_reset_done.html
+++ b/barbershop/templates/users/password_reset_done.html
@@ -25,7 +25,7 @@
                         </div>
                         
                         <h4 class="mb-3">Проверьте свою почту</h4>
-                        <p class="mb-2">Мы отправили инструкции по восстановлению пароля на указанный email.</p>
+                        <p class="mb-2">Мы отправили инструкции по восстановлению пароля на указанный вами email.</p>
                         <p class="mb-4">Если вы не получили письмо в течение нескольких минут, проверьте папку со спамом или убедитесь, что указали правильный адрес.</p>
                         
                         <div class="d-grid gap-2 mt-4">
