--- a/barbershop/templates/base.html
+++ b/barbershop/templates/base.html
@@ -38,6 +38,7 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
+                <!-- Основное навигационное меню -->
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
                         <a class="nav-link {% if request.path == '/' %}active{% endif %}" href="{% url 'landing' %}">Главная</a>
@@ -59,8 +60,8 @@
                     </li>
                 </ul>
                 
-                <!-- Объединенное пользовательское меню -->
-                <ul class="navbar-nav ml-auto">
+                <!-- Пользовательское меню (объединенное) -->
+                <ul class="navbar-nav ms-auto">
                     {% if user.is_authenticated %}
                         {% if user.is_staff %}
                         <li class="nav-item">
@@ -87,24 +88,38 @@
                         
                         <!-- Профиль пользователя -->
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                <i class="bi bi-person-circle me-1"></i>{{ user.username }}
+                            <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" 
+                               data-bs-toggle="dropdown" aria-expanded="false">
+                                {% if user.profile.avatar %}
+                                    <img src="{{ user.profile.avatar.url }}" alt="{{ user.username }}" 
+                                         class="rounded-circle me-1" style="width: 25px; height: 25px;">
+                                {% else %}
+                                    <i class="bi bi-person-circle me-1"></i>
+                                {% endif %}
+                                {{ user.username }}
                             </a>
-                            <ul class="dropdown-menu dropdown-menu-end">
-                                {% if user.is_staff %}
+                            <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="userDropdown">
                                 <li>
-                                    <a class="dropdown-item" href="{% url 'admin:index' %}">
-                                        <i class="bi bi-gear me-2"></i>Админка
+                                    <a class="dropdown-item" href="{% url 'users:profile_edit' %}">
+                                        <i class="bi bi-person me-2"></i>Мой профиль
+                                    </a>
+                                </li>
+                                <li>
+                                    <a class="dropdown-item" href="{% url 'users:profile_edit' %}">
+                                        <i class="bi bi-pencil-square me-2"></i>Редактировать профиль
+                                    </a>
+                                </li>
+                                <li>
+                                    <a class="dropdown-item" href="{% url 'users:password_change' %}">
+                                        <i class="bi bi-key me-2"></i>Сменить пароль
                                     </a>
                                 </li>
                                 <li><hr class="dropdown-divider"></li>
-                                {% endif %}
                                 <li>
-                                    <!-- Заменяем ссылку на форму с методом POST -->
-                                    <form method="post" action="{% url 'users:logout' %}" class="m-0 p-0">
+                                    <form action="{% url 'users:logout' %}" method="post" class="d-inline">
                                         {% csrf_token %}
-                                        <button type="submit" class="dropdown-item">
-                                            <i class="bi bi-box-arrow-right me-2"></i>Выйти
+                                        <button type="submit" class="dropdown-item text-danger">
+                                            <i class="bi bi-box-arrow-right me-2"></i>Выход
                                         </button>
                                     </form>
                                 </li>
@@ -126,7 +141,7 @@
             </div>
         </div>
     </nav>
-    {% endblock %}
+    {% endblock header %}
 </header>
     
     <main class="flex-shrink-0">
@@ -135,7 +150,7 @@
         {% endblock %}
     </main>
     
-   <footer class="footer mt-5 bg-dark text-white py-4">
+<footer class="footer mt-5 bg-dark text-white py-4">
     {% block footer %}
         <div class="container">
             <!-- Основная информация футера -->
@@ -218,5 +233,4 @@
     
     {% block scripts %}{% endblock %}
 </body>
-</html>
 </html>
