--- a/barbershop/templates/users/login.html
+++ b/barbershop/templates/users/login.html
@@ -80,7 +80,8 @@
                         
                         <!-- Ссылка на страницу регистрации -->
                         <div class="auth-links">
-                            <p>Нет аккаунта? <a href="{% url 'users:register' %}">Зарегистрироваться</a></p>
+                                <p>Нет аккаунта? <a href="{% url 'users:register' %}">Зарегистрироваться</a></p>
+                            <p>Забыли пароль? <a href="{% url 'users:password_reset' %}">Восстановить пароль</a></p>
                         </div>
                     </div>
                 </div>
