--- a/barbershop/templates/users/password_change_done.html
+++ b/barbershop/templates/users/password_change_done.html
@@ -28,8 +28,8 @@
                         <p class="lead mb-4">Ваш пароль был успешно обновлен. Вы можете использовать новый пароль при следующем входе.</p>
                         
                         <div class="d-grid gap-2 mt-4">
-                            <a href="{% url 'users:profile' %}" class="btn auth-submit-btn w-100">
-                                <i class="bi bi-person me-2"></i>Вернуться в профиль
+                            <a href="{% url 'users:profile_detail' request.user.profile.pk %}" class="btn auth-submit-btn w-100">
+                                <i class="bi bi-person me-2"></i>Вернуться к профилю
                             </a>
                             <a href="{% url 'landing' %}" class="btn btn-outline-secondary w-100">
                                 <i class="bi bi-house-door me-2"></i>На главную
